# cu-roaring-bitmap

./: .gitignore  CMakeLists.txt  HANDOFF_NVIDIA.md  PAPER.md  PAPER_TODOS.md  README.md  REPORT.md  REPORT_ENUMERATE_IDS.md
analysis/: related_work.md  roofline_model.md
bench/: CMakeLists.txt  bench_alloc_strategy.cu  bench_comprehensive.cu  bench_decompress.cu  bench_enumerate_ids.cu  bench_multi_and.cu  bench_optimized_query.cu  bench_point_query.cu  bench_selectivity_sweep.cu  bench_set_ops.cu  bench_transfer.cu  bench_upload_scale.cu  bench_yfcc.cu  data_gen.cuh  yfcc_export.py
cmake/: nvcc_pre_include.h
include/cu_roaring/: cu_roaring.cuh  types.cuh
include/cu_roaring/detail/: decompress.cuh  promote.cuh  set_ops.cuh  to_csr.cuh  upload.cuh  upload_ids.cuh  utils.cuh
include/cu_roaring/device/: make_view.cuh  roaring_view.cuh  roaring_warp_query.cuh
results/: plot_figures.py  plot_point_query.py  system_info.json
results/raw/: bench1_filter_construction.json  bench3_memory_footprint.json  bench4_e2e_latency.json  bench5_kernel_micro.json  bench6_point_query.json  bench7_optimized_query.json  bench8_upload_scale.json  bench9_multi_and.json
results/raw/2026-04-28/: v2_bench_vs_bitset.csv
scripts/: compare_results.py  run_baselines.py  setup_baselines.sh
src/: bloom.cu  decompress.cu  promote.cu  set_ops.cu  to_csr.cu  upload.cpp  upload_ids.cu
test/: CMakeLists.txt  test_complement.cu  test_decompress.cu  test_device_query.cu  test_promote.cu  test_set_ops.cu  test_upload.cu
v2/: CMakeLists.txt  HANDOFF.md  PLAN.md  README.md
v2/bench/: CMakeLists.txt  bench_vs_bitset.cu
v2/include/cu_roaring_v2/: api.hpp  query.cuh  types.cuh
v2/src/: decompress.cu  internal.hpp  multi_and.cu  promote.cu  upload.cpp
v2/test/: CMakeLists.txt  test_basic.cu
